// im_logic/v1/common.proto
// 定义 im-logic 服务的通用数据结构

syntax = "proto3";

option go_package = "github.com/ceyewan/gochat/api/gen/im_logic/v1;imlogicv1";
package im.logic.v1;

import "common/v1/types.proto";

// 直接使用统一类型定义

// Message 消息信息
message Message {
  // 消息 ID
  string id = 1;
  // 会话 ID
  string conversation_id = 2;
  // 发送者 ID
  string sender_id = 3;
  // 消息类型
  common.v1.MessageType type = 4;
  // 消息内容
  string content = 5;
  // 会话内序列号
  int64 seq_id = 6;
  // 创建时间（Unix 时间戳）
  int64 created_at = 7;
  // 发送者信息
  User sender = 8;
  // 消息扩展信息（JSON 格式）
  string extra = 9;
}

// User 用户信息
message User {
  // 用户 ID
  string id = 1;
  // 用户名
  string username = 2;
  // 头像 URL
  string avatar_url = 3;
  // 创建时间（Unix 时间戳）
  int64 created_at = 4;
  // 更新时间（Unix 时间戳）
  int64 updated_at = 5;
  // 是否为游客
  bool is_guest = 6;
}

// OnlineStatus 在线状态
message OnlineStatus {
  // 用户 ID
  string user_id = 1;
  // 是否在线
  bool is_online = 2;
  // 所在网关 ID
  string gateway_id = 3;
  // 最后在线时间（Unix 时间戳）
  int64 last_seen = 4;
}

// ErrorResponse 错误响应
message ErrorResponse {
  // 错误码
  common.v1.ErrorCode code = 1;
  // 错误消息
  string message = 2;
  // 请求追踪 ID
  string trace_id = 3;
  // 错误详情（可选）
  string details = 4;
}
