syntax = "proto3";

package logicproto;

option go_package = "./logicproto";

// ChatLogicService 定义聊天系统的核心业务逻辑服务
service ChatLogicService {
  // 用户认证相关
  rpc Register(RegisterRequest) returns (CommonReply) {}
  rpc Login(LoginRequest) returns (LoginReply) {}
  rpc CheckAuth(CheckAuthRequest) returns (CommonReply) {}
  rpc Logout(LogoutRequest) returns (CommonReply) {}

  // 连接管理相关
  rpc Connect(ConnectRequest) returns (CommonReply) {}
  rpc DisConnect(DisConnectRequest) returns (CommonReply) {}

  // 消息推送相关
  rpc Push(PushRequest) returns (CommonReply) {}
  rpc PushRoom(PushRequest) returns (CommonReply) {}
}

// 通用响应
message CommonReply {
  int32 code = 1;
}

// 用户认证相关消息
message RegisterRequest {
  string name = 1;
  string password = 2;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginReply {
  int32 code = 1;
  int32 user_id = 2;
  string user_name = 3;
  string token = 4;
}

message CheckAuthRequest {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

// 连接管理相关消息
message ConnectRequest {
  string token = 1;
  int32 room_id = 2;
  int32 user_id = 3;
  string instance_id = 4;
}

message DisConnectRequest {
  int32 user_id = 1;
  int32 room_id = 2;
}

// 消息发送相关
message PushRequest {
  int32 from_user_id = 1;
  string from_user_name = 2;
  int32 to_user_id = 3;
  string to_user_name = 4;
  int32 room_id = 5;
  string msg = 6;
  string create_time = 7;
}